# roboeval

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  RoboEval_PRD_Rubeno_Dechua.docx  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
PRD/: index.html
analysis/dashboard/: Dockerfile  README.md  app.py  requirements.txt
blog/2026-05-21-honest-null-residual/: index.html
blog/demo-video-script/: index.html
configs/baseline/: act_nominal.yaml  act_nominal_fast.yaml  act_nominal_mps_check.yaml
configs/perturbation/: README.md
configs/perturbation/spatial/: act_spatial_y+1cm.yaml  act_spatial_y+3cm.yaml  act_spatial_y+5cm.yaml  act_spatial_y-1cm.yaml  act_spatial_y-3cm.yaml  act_spatial_y-5cm.yaml
configs/perturbation/temporal/: act_temporal_delay_1step.yaml  act_temporal_delay_3steps.yaml  act_temporal_delay_5steps.yaml
configs/residual/: residual_ppo_y+5cm_shaped.yaml  residual_ppo_y+5cm_sparse.yaml
data/: headline.json
data/calibration/: transfer_cube_target_xy.json
data/taxonomy/: relabel_sample_18xb5ob0.json  relabel_sample_alr0r0p2.json  relabel_unlock_at_18xb5ob0.txt  relabel_unlock_at_alr0r0p2.txt
docs/: PRD.md  STATE.md  audit-2026-06-10.md  getting-started.md  index.md  kappa-relabel-runbook.md  phase4_ablation.md  research-log.md
docs/blog/: 2026-05-21-honest-null-residual.md  demo-video-script.md
docs/figures/: phase4_ablation.json
docs/reference/: cli.md  dashboard.md  envs.md  evaluation.md  index.md  policies.md  residual.md  taxonomy.md
docs/superpowers/plans/: 2026-05-21-phase5-dashboard.md  2026-05-21-phase5-mkdocs.md  2026-05-21-phase5-writeup.md
docs/superpowers/specs/: 2026-05-21-phase5-dashboard-design.md  2026-05-21-phase5-mkdocs-design.md  2026-05-21-phase5-writeup-design.md
getting-started/: index.html
kappa-relabel-runbook/: index.html
reference/: index.html
reference/cli/: index.html
reference/dashboard/: index.html
reference/envs/: index.html
reference/evaluation/: index.html
reference/policies/: index.html
reference/residual/: index.html
reference/taxonomy/: index.html
roboeval/: __init__.py  cli.py
roboeval/dashboard/: __init__.py  data.py  figures.py  models.py
roboeval/envs/: __init__.py  aloha.py  perturb.py  success.py
roboeval/evaluation/: __init__.py  calibration.py  config.py  logger.py  loop.py  results_io.py  rollout.py  types.py
roboeval/policies/: __init__.py  act_loader.py  base.py  factory.py
roboeval/residual/: __init__.py  aggregate.py  composite.py  env_wrapper.py  policy.py  reward.py  train.py
roboeval/taxonomy/: __init__.py  agreement.py  classifier.py  io.py  types.py
scripts/: build_headline_json.py  export_relabel_sample.py  plot_degradation_curve.py  plot_failure_distribution.py  relabel_from_wandb.py  relabel_score.py  render_blog_figures.py
search/: search_index.json
tests/: test_cli.py  test_smoke.py
tests/configs/: test_spatial_perturbation_configs.py  test_temporal_perturbation_configs.py
tests/dashboard/: test_callbacks.py  test_data.py  test_figures.py  test_models.py
tests/docs/: test_mkdocs_build.py
tests/envs/: test_aloha.py  test_perturb.py  test_success.py
tests/evaluation/: test_calibration.py  test_config.py  test_logger.py  test_loop.py  test_results_io.py  test_rollout.py  test_rollout_determinism.py  test_types.py
tests/policies/: test_act_loader.py  test_factory.py
tests/residual/: test_aggregate.py  test_composite.py  test_env_wrapper.py  test_policy.py  test_reward.py  test_train.py
tests/scripts/: test_build_headline_json.py  test_export_relabel_sample.py  test_plot_degradation_curve.py  test_plot_failure_distribution.py  test_relabel_from_wandb.py  test_relabel_score.py  test_render_blog_figures.py
tests/taxonomy/: test_agreement.py  test_classifier.py  test_io.py
